<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/food_item"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/dish_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:hint="@string/hint_food"/>

            <EditText
                android:id="@+id/dish_ingredients"
                android:layout_below="@id/dish_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/dish_ingredients"/>

            <Button
                android:id="@+id/save_button"
                android:layout_below="@id/dish_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"/>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>